--- a/public/index.html
+++ b/public/index.html
@@ -25,16 +25,174 @@
 	<!-- Adicionar link da página no href abaixo, como url canonical -->
 	<link rel="canonical" href="" />
 	<link rel="stylesheet" href="./styles/output.css" />
-	<link rel="apple-touch-icon" href="./images/favicon.png">
+	<link rel="apple-touch-icon" href="./images/favicon.ico">
 	<link rel="manifest" href="./images/favicon.png">
 	<link rel="icon" type="image/png" href="./images/favicon.png">
 	<link rel="shortcut icon" href="./images/favicon.ico">
-	<title>Sign</title>
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+	<title>Netflix</title>
+	<script type="module" src="./scripts/jquery-3.7.1.min.js"></script>
+	<script type="module" src="./scripts/dom.js"></script>
+	<script type="module" src="./scripts/read-more.js"></script>
+	<script type="module" src="./scripts/footer.js"></script>
+	<script type="module" src="./scripts/form.js"></script>
+	<script type="module" src="./scripts/main.js"></script>
 </head>
 
-<body>
-	<script type="module" src="./scripts/dom.js"></script>
-	<script type="module" src="./scripts/main.js"></script>
+<body
+	class="bg-black h-screen shrink min-w-96 flex flex-col justify-between items-center before:bg-banner before:bg-cover before:fixed before:top-0 before:right-0 before:left-0 before:bottom-0 before:-z-20 after:bg-black/70 after:fixed after:top-0 after:right-0 after:left-0 after:bottom-0 after:-z-10">
+
+	<!-- Logo tipográfico do streaming Netflix -->
+	<header class="p-3 self-start z-0">
+		<figure>
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 309 83" fill="none" class="h-8"
+				alt="Logo tipográfico do streaming Netflix">
+				<path
+					d="M238.626 75.3097C242.971 75.6476 247.3 76.0015 251.645 76.3877V0H238.626V75.3097ZM29.3052 46.962L12.3594 0H0V82.9839C4.32899 82.3726 8.65799 81.7773 13.0192 81.2142V36.0863L28.0821 79.364C32.8134 78.817 37.5769 78.2861 42.3244 77.8035V0H29.3052V46.962ZM54.8286 76.5968C66.8178 75.5028 78.8714 74.6019 90.9732 73.9101V61.0876C83.2486 61.5381 75.524 62.069 67.8477 62.6643V43.2778C72.8848 43.2295 79.5312 43.0686 85.4212 43.1491V30.3266C80.722 30.3105 73.1584 30.391 67.8477 30.4553V12.9351H90.9732V0H54.8286V76.5968ZM99.3254 12.9351H112.94V72.8804C117.269 72.7195 121.614 72.5747 125.959 72.4621V12.9351H139.574V0H99.3254V12.9351ZM147.91 72.1082H160.929V42.5216H178.567V29.6992H160.913V12.9351H184.232V0H147.91V72.1082ZM308.984 0H294.693L285.279 21.8319L276.798 0H262.717L277.844 39.0143L261.349 77.2886C265.919 77.7391 270.474 78.2057 275.028 78.7044L284.635 56.4542L294.146 80.9889C299.103 81.6325 304.043 82.2921 308.984 83L309 82.9839L292.054 39.2878L308.984 0ZM205.587 0H192.584V72.7517C204.412 73.1539 216.192 73.7492 227.908 74.5375V61.7151C220.489 61.2163 213.054 60.798 205.587 60.4602V0Z"
+					fill="#E50914" />
+			</svg>
+		</figure>
+	</header>
+	<!-- /Logo tipográfico do streaming Netflix -->
+
+	<main class="bg-black/85 w-10/12 p-6 z-0 space-y-8 max-w-96">
+		<!-- Entrar -->
+		<header>
+			<h1 class="text-white text-3xl font-medium">Entrar</h1>
+		</header>
+		<!-- /Entrar -->
+
+		<!-- Formulário -->
+		<form class="w-full space-y-8" autocomplete="off" method="POST">
+			<!-- Campos de entrada -->
+			<section class="text-white space-y-4">
+				<!-- User -->
+				<div class="relative *:px-4">
+					<input type="text" name="userLoginId" id="userLoginId"
+						class="peer focus:ring-zinc-400 focus:ring-1 focus:outline-none bg-zinc-800 w-full rounded-md py-3 text-sm leading-6"
+						required>
+					<label for="userLoginId"
+						class="absolute top-0 left-0 translate-y-1/2 select-none duration-500 transition-all peer-focus:text-xs peer-focus:text-zinc-400 peer-focus:translate-y-0 peer-[.has-content]:text-xs peer-[.has-content]:translate-y-0 peer-[.has-content]:text-zinc-400 sm:text-sm sm:leading-6 md:text-md md:leading-6"
+						id="label_userLoginId">Email ou número de telefone
+					</label>
+					<notice class="hidden text-xs text-orange-400" id="notice-user">Informe um email ou número de
+						telefone válido.</notice>
+				</div>
+				<!-- /User -->
+				<!-- Password -->
+				<div class="relative *:px-4" id="div-password">
+					<input type="password" name="userPassword" id="userPassword" minlength="8"
+						class="peer/password focus:ring-zinc-400 focus:ring-1 focus:outline-none bg-zinc-800 w-full rounded-md py-3 text-sm leading-6"
+						required>
+					<label for="userPassword"
+						class="absolute top-0 left-0 translate-y-1/2 select-none duration-500 transition-all peer-focus/password:text-xs peer-focus/password:text-zinc-400 peer-focus/password:translate-y-0 peer-[.has-content]/password:text-xs peer-[.has-content]/password:translate-y-0 peer-[.has-content]/password:text-zinc-400 sm:text-sm sm:leading-6 md:text-md md:leading-6"
+						id="label_userLoginId">Senha
+					</label>
+					<view id="show-view"
+						class="hidden absolute top-0 right-0 translate-y-1/2 text-zinc-400 cursor-pointer">Mostrar
+					</view>
+					<notice class="hidden text-xs text-orange-400" id="notice-password">A senha deve ter entre 4 e
+						60 caracteres.</notice>
+				</div>
+				<!-- /Password -->
+			</section>
+			<!-- /Campos de entrada -->
+
+			<!-- Submit  -->
+			<section>
+				<!-- Input submit -->
+				<input type="submit" value="Entrar" id="submit"
+					class="bg-red-submit cursor-pointer w-full rounded-md h-12 py-2 px-4 text-white font-medium text-sm">
+				<!-- /Input submit -->
+				<div class="text-zinc-400 flex justify-between text-xs items-center py-4">
+					<div class="flex space-x-2">
+						<!-- Componente checkbox -->
+						<label for="checkbox_2"
+							class="select-none grid grid-flow-col gap-3 items-center cursor-pointer">
+							<!-- Checkbox -->
+							<div class="grid items-center justify-center">
+								<input type="checkbox" id="checkbox_2"
+									class="peer row-start-1 col-start-1 appearance-none w-4 h-4 border ring-transparent border-slate-300 rounded  checked:bg-zinc-400 checked:border-zinc-400 forced-colors:appearance-auto">
+								<svg viewBox="0 0 14 14" fill="none"
+									class="invisible peer-checked:visible row-start-1 col-start-1 stroke-black/85 forced-colors:hidden">
+									<path d="M3 8L6 11L11 3.5" stroke-width="2" stroke-linecap="round"
+										stroke-linejoin="round"></path>
+								</svg>
+							</div>
+							<!-- /Checkbox -->
+							Lembre-se de mim
+						</label>
+						<!-- /Componente checkbox -->
+					</div>
+
+					<!-- Precisa de ajuda -->
+					<a href="https://www.netflix.com/LoginHelp" title="Precisa de ajuda?">
+						<p class="hover:decoration-inherit hover:underline hover:decoration-1">Precisa de ajuda?</p>
+					</a>
+					<!-- /Precisa de ajuda -->
+				</div>
+			</section>
+			<!-- /Submit  -->
+		</form>
+		<!-- /Formulário -->
+
+		<section class="text-zinc-500 text-xs space-y-4">
+			<p class="text-zinc-600 text-sm">Novo por aqui? <a href="https://www.netflix.com/" rel="noopener noreferrer"
+					class="text-white hover:decoration-white hover:underline hover:decoration-1">Assine agora</a>.
+			</p>
+			<p>Esta página é protegida pelo Google reCAPTCHA para garantir que você não é um robô. <span
+					class="text-link cursor-pointer" id="saiba-mais">Saiba
+					mais.</span>
+			</p>
+			<p class="hidden" id="information">As informações recolhidas pelo Google reCAPTCHA estão sujeitas à <a
+					href="https://policies.google.com/privacy"
+					class="text-link hover:decoration-inherit hover:underline hover:decoration-1">Política de
+					Privacidade</a> e <a href="https://policies.google.com/terms"
+					class="text-link hover:decoration-inherit hover:underline hover:decoration-1">Termos de Uso</a>, e
+				são usadas para
+				oferecer, manter e melhorar o serviço reCAPTCHA e por questões de segurança (não são usadas para exibir
+				anúncios personalizados pelo Google).
+			</p>
+		</section>
+	</main>
+
+	<footer class="bg-black/85 w-full mt-12 p-6 text-zinc-600 text-xs space-y-6 lg:text-base xl:text-base">
+		<header class="text-sm lg:text-base xl:text-base">
+			<p>Dúvidas? Ligue <a href="tel:0800 591 2876" target="_blank"
+					class="hover:decoration-inherit hover:underline hover:decoration-1">0800 591 2876</a>
+			</p>
+		</header>
+
+		<!-- Links -->
+		<ul id="listFooter" class="grid grid-cols-3 grid-rows-2 justify-center items-center gap-1">
+			<li class="hover:decoration-inherit hover:underline hover:decoration-1 cursor-pointer">
+				<a href="">Perguntas frequentes</a>
+			</li>
+			<li class="hover:decoration-inherit hover:underline hover:decoration-1 cursor-pointer">
+				<a href="">Central de Ajuda</a>
+			</li>
+			<li class="hover:decoration-inherit hover:underline hover:decoration-1 cursor-pointer">
+				<a href="">Termos de Uso</a>
+			</li>
+			<li class="hover:decoration-inherit hover:underline hover:decoration-1 cursor-pointer">
+				<a href="">Privacidade</a>
+			</li>
+			<li class="hover:decoration-inherit hover:underline hover:decoration-1 cursor-pointer">
+				<a href="">Preferências de cookies</a>
+			</li>
+			<li class="hover:decoration-inherit hover:underline hover:decoration-1 cursor-pointer">
+				<a href="">Informações corporativas</a>
+			</li>
+		</ul>
+		<!-- /Links -->
+
+		<!-- Copyright -->
+		<p class="text-center py-4">© 2024 Netflix. Regulated by the MIT License.</p>
+		<!-- /Copyright -->
+	</footer>
 </body>
 
 </html>
