--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 			<section>
 				<!-- Input submit -->
 				<input type="submit" value="Entrar" id="submit" disabled
-					class="disabled:bg-var-primary/50 cursor-no-drop w-full rounded-md h-12 py-2 px-4 disabled:text-white/50 font-medium text-sm bg-var-primary text-white">
+					class="disabled:bg-var-primary/50 disabled:cursor-no-drop w-full rounded-md h-12 py-2 px-4 disabled:text-white/50 font-medium text-sm cursor-pointer bg-var-primary text-white">
 				<!-- /Input submit -->
 				<div class="text-zinc-400 flex justify-between text-xs items-center py-4">
 					<div class="flex space-x-2">
