chore(html): ajustes nas meta tags de compartilhamento

--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="description"
-		content="Confira meu clone do Netflix, um dos maiores e melhores serviços de streamings." />
+		content="Confira o Netflix Bookstore, a nova aposta da streaming para o segmento de Livraria Online" />
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<meta name="author" content="Samuel da Silva" />
-	<meta property="og:title" content="Netflix Clone" />
+	<meta property="og:title" content="Netflix Bookstore - livraria online" />
 	<meta property="og:description"
-		content="Confira meu clone do Netflix, um dos maiores e melhores serviços de streamings." />
+		content="Confira o Netflix Bookstore, a nova aposta da streaming para o segmento de Livraria Online" />
 	<meta property="og:image" content="./images/favicon.png" />
 	<meta name="twitter:card"
-		content="Confira meu clone do Netflix, um dos maiores e melhores serviços de streamings." />
-	<meta name="twitter:title" content="Título da Aplicação para compartilhamento no twitter" />
+		content="Confira o Netflix Bookstore, a nova aposta da streaming para o segmento de Livraria Online" />
+	<meta name="twitter:title" content="Netflix Bookstore - livraria online" />
 	<meta name="twitter:description"
-		content="Confira meu clone do Netflix, um dos maiores e melhores serviços de streamings." />
+		content="Confira o Netflix Bookstore, a nova aposta da streaming para o segmento de Livraria Online" />
 	<meta name="twitter:image" content="./images/favicon.png" />
 	<meta name="robots" content="index, follow" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
@@ -37,11 +37,11 @@
 	<script type="module" src="./scripts/footer.js"></script>
 	<script type="module" src="./scripts/form.js"></script>
 	<script type="module" src="./scripts/main.js"></script>
-	<title>Netflix</title>
+	<title>Netflix Bookstore - livraria online</title>
 </head>
 
 <body
-	class="bg-var-secondary h-screen shrink min-w-80 flex flex-col justify-between items-center before:bg-banner before:bg-cover before:fixed before:top-0 before:right-0 before:left-0 before:bottom-0 before:-z-20 after:bg-var-secondary/70 after:fixed after:top-0 after:right-0 after:left-0 after:bottom-0 after:-z-10 sm:before-banner-mobile md:before-banner-mobile">
+	class="bg-var-secondary h-screen shrink min-w-80 flex flex-col justify-between items-center before:h-screen before:bg-banner before:bg-cover before:fixed before:top-0 before:right-0 before:left-0 before:bottom-0 before:-z-20 after:bg-var-secondary/70 after:fixed after:top-0 after:right-0 after:left-0 after:bottom-0 after:-z-10 sm:before-banner-mobile md:before-banner-mobile">
 
 	<!-- Logo tipográfico do streaming Netflix -->
 	<header class="p-3 self-start z-0">
