--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 	<title>Netflix Bookstore - livraria online</title>
 </head>
 
-<body
+<body role="document"
 	class="flex flex-col items-center justify-between h-screen bg-var-secondary shrink min-w-80 before:h-screen before:bg-banner before:bg-cover before:fixed before:top-0 before:right-0 before:left-0 before:bottom-0 before:-z-20 after:bg-var-secondary/70 after:fixed after:top-0 after:right-0 after:left-0 after:bottom-0 after:-z-10 sm:before-banner-mobile md:before-banner-mobile">
 
 	<!-- Logo tipográfico do streaming Netflix -->
-	<header class="z-0 self-start p-3">
-		<figure>
+	<header class="z-0 self-start p-3" role="heading">
+		<figure role="figure">
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 309 83" fill="none" class="h-8"
 				alt="Logo tipográfico do streaming Netflix">
 				<path
@@ -56,15 +56,15 @@
 	</header>
 	<!-- /Logo tipográfico do streaming Netflix -->
 
-	<main class="z-0 w-10/12 p-6 space-y-8 bg-var-secondary/85 max-w-96">
+	<main class="z-0 w-10/12 p-6 space-y-8 bg-var-secondary/85 max-w-96" role="main">
 		<!-- Entrar -->
-		<header>
+		<header role="text">
 			<h1 class="text-3xl font-medium text-white">Entrar</h1>
 		</header>
 		<!-- /Entrar -->
 
 		<!-- Formulário -->
-		<form class="w-full space-y-8" autocomplete="off" method="POST">
+		<form class="w-full space-y-8" autocomplete="off" method="POST" role="form">
 			<!-- Campos de entrada -->
 			<section class="space-y-4 text-white">
 				<!-- User -->
@@ -76,7 +76,8 @@
 						class="absolute top-0 left-0 translate-y-1/2 select-none duration-500 transition-all peer-focus:text-xs peer-focus:text-zinc-400 peer-focus:translate-y-0 peer-[.has-content]:text-xs peer-[.has-content]:translate-y-0 peer-[.has-content]:text-zinc-400 sm:text-sm sm:leading-6"
 						id="label_userLoginId">Email ou número de telefone
 					</label>
-					<notice class="hidden text-xs text-orange-400" id="notice-user">Informe um email ou número de
+					<notice class="hidden text-xs text-orange-400" id="notice-user" role="alert">Informe um email ou
+						número de
 						telefone válido.</notice>
 				</div>
 				<!-- /User -->
@@ -93,7 +94,8 @@
 						class="absolute top-0 right-0 hidden translate-y-1/2 cursor-pointer text-zinc-400 sm:text-sm sm:leading-6">
 						Mostrar
 					</view>
-					<notice class="hidden text-xs text-orange-400" id="notice-password">A senha deve ter entre 4 e 60
+					<notice class="hidden text-xs text-orange-400" id="notice-password" role="alert">A senha deve ter
+						entre 4 e 60
 						caracteres.</notice>
 				</div>
 				<!-- /Password -->
@@ -113,7 +115,7 @@
 							class="grid items-center grid-flow-col gap-3 cursor-pointer select-none">
 							<!-- Checkbox -->
 							<div class="grid items-center justify-center">
-								<input type="checkbox" id="checkbox_2"
+								<input type="checkbox" id="checkbox_2" role="checkbox"
 									class="w-4 h-4 col-start-1 row-start-1 border rounded appearance-none peer ring-transparent border-slate-300 checked:bg-zinc-400 checked:border-zinc-400 forced-colors:appearance-auto">
 								<svg viewBox="0 0 14 14" fill="none"
 									class="invisible col-start-1 row-start-1 peer-checked:visible stroke-var-secondary/85 forced-colors:hidden">
@@ -140,14 +142,15 @@
 
 		<section class="space-y-4 text-xs text-zinc-500">
 			<p class="text-sm text-zinc-600">Novo por aqui? <a href="https://www.netflix.com/" rel="noopener noreferrer"
-					class="text-white hover:decoration-white hover:underline hover:decoration-1">Assine agora</a>.
+					class="text-white hover:decoration-white hover:underline hover:decoration-1"
+					role="alertdialog">Assine agora</a>.
 			</p>
 			<p>Esta página é protegida pelo Google reCAPTCHA para garantir que você não é um robô. <span
-					class="cursor-pointer text-link" id="saiba-mais">Saiba
+					class="cursor-pointer text-link" id="saiba-mais" role="alert">Saiba
 					mais.</span>
 			</p>
-			<p class="hidden" id="information">As informações recolhidas pelo Google reCAPTCHA estão sujeitas à <a
-					href="https://policies.google.com/privacy"
+			<p class="hidden" id="information" role="contentinfo">As informações recolhidas pelo Google reCAPTCHA estão
+				sujeitas à <a href="https://policies.google.com/privacy"
 					class="text-link hover:decoration-inherit hover:underline hover:decoration-1">Política de
 					Privacidade</a> e <a href="https://policies.google.com/terms"
 					class="text-link hover:decoration-inherit hover:underline hover:decoration-1">Termos de Uso</a>, e
@@ -161,29 +164,29 @@
 	<footer class="w-full p-6 mt-12 space-y-6 text-xs bg-var-secondary/85 text-zinc-600 lg:text-base xl:text-base">
 		<header class="text-sm lg:text-base xl:text-base">
 			<p>Dúvidas? Ligue <a href="tel:0800 591 2876" target="_blank"
-					class="hover:decoration-inherit hover:underline hover:decoration-1">0800 591 2876</a>
+					class="hover:decoration-inherit hover:underline hover:decoration-1" role="cell">0800 591 2876</a>
 			</p>
 		</header>
 
 		<!-- Links -->
-		<ul id="listFooter" class="grid items-center justify-center grid-cols-3 grid-rows-2 gap-1">
+		<ul id="listFooter" class="grid items-center justify-center grid-cols-3 grid-rows-2 gap-1" role="list">
 			<li class="cursor-pointer hover:decoration-inherit hover:underline hover:decoration-1">
-				<a href="">Perguntas frequentes</a>
+				<a href="" role="link">Perguntas frequentes</a>
 			</li>
 			<li class="cursor-pointer hover:decoration-inherit hover:underline hover:decoration-1">
-				<a href="">Central de Ajuda</a>
+				<a href="" role="link">Central de Ajuda</a>
 			</li>
 			<li class="cursor-pointer hover:decoration-inherit hover:underline hover:decoration-1">
-				<a href="">Termos de Uso</a>
+				<a href="" role="link">Termos de Uso</a>
 			</li>
 			<li class="cursor-pointer hover:decoration-inherit hover:underline hover:decoration-1">
-				<a href="">Privacidade</a>
+				<a href="" role="link">Privacidade</a>
 			</li>
 			<li class="cursor-pointer hover:decoration-inherit hover:underline hover:decoration-1">
-				<a href="">Preferências de cookies</a>
+				<a href="" role="link">Preferências de cookies</a>
 			</li>
 			<li class="cursor-pointer hover:decoration-inherit hover:underline hover:decoration-1">
-				<a href="">Informações corporativas</a>
+				<a href="" role="link">Informações corporativas</a>
 			</li>
 		</ul>
 		<!-- /Links -->
