feat: criação base da tela de seleção de contas

--- a/index.html
+++ b/index.html
@@ -27,16 +27,17 @@
 	<link rel="manifest" href="./images/favicon.png">
 	<link rel="icon" type="image/png" href="./images/favicon.png">
 	<link rel="shortcut icon" href="./images/favicon.ico">
+	<link rel="canonical" href="https://samcolt36.github.io/netflix-bookstore-login/">
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-	<script type="module" src="./scripts/jquery-3.7.1.min.js"></script>
-	<script type="module" src="./scripts/dom.js"></script>
-	<script type="module" src="./scripts/read-more.js"></script>
-	<script type="module" src="./scripts/footer.js"></script>
-	<script type="module" src="./scripts/form.js"></script>
-	<script type="module" src="./scripts/main.js"></script>
+	<script type="module" src="./scripts/libs/jquery-3.7.1.min.js"></script>
+	<script type="module" src="./scripts/index/dom.js"></script>
+	<script type="module" src="./scripts/index/read-more.js"></script>
+	<script type="module" src="./scripts/index/footer.js"></script>
+	<script type="module" src="./scripts/index/form.js"></script>
+	<script type="module" src="./scripts/index/main.js"></script>
 	<title>Netflix Bookstore - livraria online</title>
 </head>
 
