--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -32,17 +32,11 @@
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 	<link rel="stylesheet"
 		href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-	<script type="module" src="./scripts/libs/jquery-3.7.1.min.js"></script>
-	<script type="module" src="./scripts/index/dom.js"></script>
-	<script type="module" src="./scripts/index/read-more.js"></script>
-	<script type="module" src="./scripts/index/footer.js"></script>
-	<script type="module" src="./scripts/index/form.js"></script>
-	<script type="module" src="./scripts/index/main.js"></script>
 	<title>Netflix Bookstore - livraria online</title>
 </head>
 
 <body role="document"
-	class="flex flex-col items-center justify-between h-screen bg-var-secondary shrink min-w-80 before:h-screen before:bg-banner before:bg-cover before:fixed before:top-0 before:right-0 before:left-0 before:bottom-0 before:-z-20 after:bg-var-secondary/70 after:fixed after:top-0 after:right-0 after:left-0 after:bottom-0 after:-z-10 sm:before-banner-mobile md:before-banner-mobile">
+	class="flex flex-col items-center justify-between h-screen bg-var-secondary shrink min-w-80 before:h-screen before:bg-banner before:bg-cover before:fixed before:top-0 before:right-0 before:left-0 before:bottom-0 before:-z-20 after:bg-var-secondary/70 after:fixed after:top-0 after:right-0 after:left-0 after:bottom-0 after:-z-10 sm:before:banner-mobile md:before:banner-mobile">
 
 	<!-- Logo tipográfico do streaming Netflix -->
 	<header class="z-0 self-start p-3" role="heading">
